<resources>
    <string name="app_name">CUALA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="menu_feed_title">Feed</string>
    <string name="menu_members">Members</string>
    <string name="menu_jobsearch_title">Job Search</string>
    <string name="menu_messages_title">Messages</string>
    <string name="menu_events_title">Events</string>
    <string name="menu_donate_title">Donate</string>
    <string name="menu_podcast_title">Podcasts</string>
    <string name="menu_financial_reports_title">Financial Reports</string>
    <string name="menu_alumni_services_title">Alumni Services</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="titleSignUp">Not a member? <u>Join Us!</u></string>
</resources>